--- a/backend/package.json
+++ b/backend/package.json
@@ -15,9 +15,12 @@
     "@sendgrid/mail": "^7.4.7",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.0.7"
+    "mongoose": "^6.0.7",
+    "multer": "^1.4.3"
   }
 }
