--- a/package.json
+++ b/package.json
@@ -14,13 +14,17 @@
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
+    "@reduxjs/toolkit": "^1.6.1",
     "apisauce": "^2.1.1",
     "expo": "~42.0.1",
+    "expo-app-loading": "^1.1.2",
     "expo-blur": "~9.0.3",
     "expo-constants": "~11.0.1",
     "expo-image-picker": "~10.2.2",
     "expo-location": "~12.1.2",
+    "expo-notifications": "~0.12.3",
     "expo-permissions": "~12.1.1",
+    "expo-secure-store": "~10.2.0",
     "expo-status-bar": "~1.0.4",
     "formik": "^2.2.9",
     "jwt-decode": "^3.1.2",
@@ -36,6 +40,7 @@
     "react-native-screens": "~3.4.0",
     "react-native-svg": "12.1.1",
     "react-native-web": "^0.17.1",
+    "react-redux": "^7.2.5",
     "yup": "^0.32.9",
     "zlib": "^1.0.5"
   },
