--- a/package.json
+++ b/package.json
@@ -35,10 +35,12 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-expo-image-cache": "^4.1.0",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-maps": "0.28.0",
     "react-native-progress": "^5.0.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
     "react-native-svg": "12.1.1",
+    "react-native-svg-uri": "^1.2.3",
     "react-native-web": "^0.17.1",
     "react-redux": "^7.2.5",
     "yup": "^0.32.9",
